# weather-api

./: .gitignore  .pre-commit-config.yaml  README.md  a.py  pyproject.toml  run_mypy_airflow.sh  run_pylint_airflow.sh
.github/workflows/: ci.yml
airflow_scripts/: pyproject.toml
airflow_scripts/dags/: dags.py  tasks.py
airflow_scripts/dags/config/: queries.py
data/: stations.csv
tests/files/: download.py  files.yaml
tests/test_download/: test_smn_download.py
tests/test_download/test_query/: test_smn_download.py
tests/test_etl/: test_etl.py
tests/test_query/: test_get_dataframe.py  test_smn_download.py  test_validate_raw.py
tests/test_validating/test_date/: test_check_date.py  utils.py
tests/test_validating/test_lines/: test_check_lines.py  utils.py
tests/test_validating/test_positional_line/: test_check_positional_line.py  utils.py
tests/utils/: __init__.py  data.py  path.py
weather_api/data_catalog/: __init__.py  data_catalog.yaml  pandas_dtypes.py  pandas_types.py  schema.py  sql_base.py  sql_types.py  sql_typing.py
weather_api/download/: smn_download.py  smn_urls.json  url_data.yaml
weather_api/etl/: __init__.py  etl.py
weather_api/etl_extras/: __init__.py  utils.py
weather_api/exceptions/: __init__.py  date.py  exception_dict.py  patterns.py
weather_api/migrations/: env.py
weather_api/query/: __init__.py  query.py  query_dict.py
weather_api/query/forecast/: data_contract.yml  query.py  schema.py  sql_schema.py
weather_api/query/measured/: data_contract.yml  query.py  schema.py  sql_schema.py
weather_api/query/observations/: data_contract.yml  query.py  schema.py  sql_schema.py
weather_api/query/solar_radiation/: data_contract.yml  query.py  schema.py  sql_schema.py
weather_api/static_data/: __init__.py  static_dict.py
weather_api/static_data/stations/: schema.py  sql_schema.py  static.py
weather_api/utils/: date.py  files.py
weather_api/validating/: __init__.py  validate.py
weather_api/validating/date/: __init__.py  check_date_dict.py  forecast.py  measured.py  solar_radiation.py
weather_api/validating/patterns/: __init__.py  positional.py  (+1 more)
(+61 files in other folders)
