[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["Sebastián Dalceggio <sdalceggio@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_api"}]

[tool.pytest.ini_options]
pythonpath = ["weather_api"]


[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.31.0"
cloudpathlib = "^0.17.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
pre-commit = "3.5.0"
pytest = "^8.0.0"
requests-mock = "^1.11.0"
types-requests = "^2.31.0.20240125"
types-pyyaml = "^6.0.12.12"


[tool.poetry.group.etl.dependencies]
pendulum = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
