[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["Sebastián Dalceggio <sdalceggio@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_api"}]
include = ["weather_api/py.typed"]

[tool.pytest.ini_options]
pythonpath = ["weather_api"]


[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31.0"
cloudpathlib = "^0.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
pre-commit = "3.5.0"
pytest = "^8.0.0"
requests-mock = "^1.11.0"
types-requests = "^2.31.0.20240125"
types-pyyaml = "^6.0.12.12"
pandera = {extras = ["mypy"], version = "^0.18.0"}


[tool.poetry.group.etl.dependencies]
pendulum = "^3.0.0"
pandas = "^2.2.1"
pandera = {extras = ["io"], version = "^0.18.0"}
sqlalchemy = "^2.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
